test/invalid/baseline/iterable-args.txt
Syntax error at line 2 in iterable-args.webidl, since `interface X`:
  iterable<DOMString>();
                     ^ Arguments are only allowed for `async iterable`
